--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -11,6 +11,7 @@
 Разрешить пункты контекстного меню
 Запрашивать права администратора в проводнике
 Создавать ярлыки на рабочем столе
+Load ImDskSvc automatically
 Язык:
 Пожалуйста, наведите указатель на элемент списка для получения информации.
 Установка драйвера. Подразумевается установка апплета Панели Управления и утилит коммандной строки, imdisk.exe, и интерфейс управления томами в контектном меню Проводника.##Введите "imdisk" в коммандной строке для справки.
@@ -19,6 +20,7 @@
 Добавить пункты в контекстное меню дисков и файлов для управления томами и файлами оббразов прямо в Проводнике.##Можно настроить позднее в меню Пуск.
 Это воздействует на команды  в контекстном меню дисков: "Сохранить данные в файл-образ" and "Отключить том ImDisk".##Решает некоторые проблемы с UAC.##Это может быть настроено позднее в меню Пуск.
 Создать ярлыки на рабочем столе.##Все ярлыки создаются в меню Пуск.
+Start ImDskSvc automatically at system startup.##No tool in this package uses this service, so you can safely uncheck this option.##It is installed by the driver to initiate TCP/IP or serial port connections with proxy softwares.
 Создатели
 Установка
 Отмена
@@ -28,7 +30,7 @@
 Ошибка: не удалось создать службу.
 The previous installation is in another folder.#Do you want to remove it?
 Установка заершена.
-Установка завершена.##И всё же, необходимо установить .NET Framework 4.#Без этого Вам не удастся подключить файлы образов некоторых форматов.##Перейдите на <a href="http://www.microsoft.com/en-us/download/details.aspx?id=17113">Microsoft Download Center</a> для загрузки установщика.
+Установка завершена.##И всё же, необходимо установить .NET Framework 4.#Без этого Вам не удастся подключить файлы образов некоторых форматов.##Перейдите на <a href="https://www.microsoft.com/en-us/download/details.aspx?id=17113">Microsoft Download Center</a> для загрузки установщика.
 ОК
 
 ImDisk - Создатели
@@ -136,7 +138,7 @@ Default: disabled.##Use a folder instead of a drive letter to mount the ramdisk.
 Удаляя с Ram-диска, удалять в источнике
 Исключая папки:
 Синхронизировать сейчас
-Если выбрана папка, её содержимое будет однократно скопировано на созданный RAM-диск# вместе со всеми файловыми атрибутами, правами доступа, параметрами аудита и прочими свойствами, применимыми к файловой системе.
+Если выбрана папка, её содержимое будет однократно скопировано на созданный RAM-диск# вместе со всеми файловыми атрибутами, правами доступа, параметрами аудита и прочими свойствами, применимыми к файловой системе.##An image file must be raw, without partition, and with a valid file system.#Such image can be created for instance with a right click on a drive letter#in Explorer: "Save disk contents as image file".
 По умолчанию: отключено.##Копировать данные из RAM-диска в файл-образа или конечный каталог#при завершении работы, в зависимости от параметров, указанных ниже.
 Одна директория в строке.#Содержимое папок соответствует содержимому корневого каталога#(буква диска или точка подключения): не добавлять.
 Синхронизировать все зарегистрированные RAM-диски немедленно.
@@ -250,13 +252,12 @@ Error: the selected drive letter is already in use.
 
 Создать новый файл образа
 Указанный файл не существует.#Желаете создать новый образ?
-Размер файла:#(От 20КБ)
+Размер файла:#(От 65КБ)
 Монтировать
 Создать
 Отмена
 Ошибка: Не удается создать файл.
 Ошибка: Не удается создать файл указанного размера.
-Ошибка: Не удается инициализировать файл.
 
 Байт
 КБ
