--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -11,6 +11,7 @@ RamDisk Configuration Tool
 Aktivera kontextmenyposter
 begär administratörsrättigheter i Utforskaren
 Skapa genvägar på skrivbordet
+Starta ImDskSvc automatiskt
 Språk:
 Håll muspekaren över ett objekt för info.
 Installerar drivrutin. Detta inkluderar en kontrollpanelpost, ett kommandoradsverktyg, imdisk.exe, och användargränssnitt för att hantera volymer från utforskarens kontextmeny.##Skriv "imdisk" i kommandotolken för info.
@@ -19,6 +20,7 @@ Detta verktyg låter dig enkelt konfigurera en eller flera RamDiskar med variera
 Lägger till poster i disk- och filkontext för att hantera ImDisk-volymer och avbildsfiler direkt från Utforskaren.##Detta alternativ kan aktiveras senare, i Windows startmeny.
 Detta påverkar diskkontextens kommandon: "Spara diskinnehåll som avbildsfil" och "Avmontera ImDisk Virtual Disk".##Löser några UAC-relaterade frågor.##Detta alternativ kan aktiveras senare, i Windows startmeny.
 Skapar genvägar på skrivbordet.##Alla genvägar skapas alltid i Windows startmeny.
+Starta ImDskSvc automatiskt vid systemstart.##Inget verktyg i det här paketet använder denna tjänst, så du kan riskfritt avmarkera detta alternativ.##Det installeras av drivrutinen för att initiera TCP/IP eller serieportanslutningar med proxy-mjukvara.
 Tack
 Installera
 Avbryt
@@ -28,7 +30,7 @@ Ogiltig sökväg.
 Fel: Kan inte skapa tjänst.
 Föregående installation finns i en annan mapp.#Vill du ta bort den?
 Installation slutförd.
-Installationen slutförd.##.NET Framework 4 finns dock inte i ditt system.#Utan det, kan du inte montera vissa avbildsformat.##Besök <a href="http://www.microsoft.com/en-us/download/details.aspx?id=17113">Microsoft Download Center</a> för att ladda ner en installerare.
+Installationen slutförd.##.NET Framework 4 finns dock inte i ditt system.#Utan det, kan du inte montera vissa avbildsformat.##Besök <a href="https://www.microsoft.com/en-us/download/details.aspx?id=17113">Microsoft Download Center</a> för att ladda ner en installerare.
 OK
 
 ImDisk - Tack!
@@ -136,7 +138,7 @@ Kopiera endast filer med arkivattribut
 Radera data som tagits bort från RamDisken
 Undantagna mappar:
 Synkronisera nu
-Om du väljer en mapp kommer hela innehållet att kopieras så fort ramdisken#skapats, inklusive filattribut och ACL, beroende på filsystemet.
+Om du väljer en mapp kommer hela innehållet att kopieras så fort ramdisken#skapats, inklusive filattribut och ACL, beroende på filsystemet.##En avbildsfil måste vara rå, utan partitioner, och med ett giltigt filsystem.#En sådan avbild kan t.ex. skapas med ett högerklick på en enhetsbokstav#i Utforskaren, "Spara diskinnehåll som avbildsfil".
 Standard: Inaktiverad.##Kopierar data från ramdisken till mappen eller avbilden#vid systemavstängning, beroende på nedanstående parametrar.
 En mapp per rad.#Mappar är relativa till ramdiskens root#(enhetsbeteckning eller monteringspunkt): Lägg inte till det.
 Synkronisera alla registrerade ramdiskar nu.
@@ -250,13 +252,12 @@ Avsluta
 
 Skapa ny avbildsfil
 Filen finns inte.#Vill du skapa en ny rå avbildsfil?
-        Filstorlek:#        (Min 20KB)
+        Filstorlek:#        (Min 65KB)
 Montera
 Skapa
 Avbryt
 Fel: Filen kan inte skapas.
 Fel: Kan inte skapa en fil med specificerad storlek.
-Fel: Kan inte initiera filen.
 
 Byte
 KB
