--- a/install/lang/french.txt
+++ b/install/lang/french.txt
@@ -43,6 +43,7 @@ Traductions :
 - Deutsch: Bodo Thevissen
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
+- Italiano: Ajeje Brazorf
 
 Réglages Généraux
 Désinstaller
