--- a/install/lang/swedish.txt
+++ b/install/lang/swedish.txt
@@ -43,6 +43,7 @@ ImDisk - Tack!
 - Deutsch: Bodo Thevissen
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
+- Italiano: Ajeje Brazorf
 
 Allmänna inställningar
 Avinstallera
