--- a/install/lang/english.txt
+++ b/install/lang/english.txt
@@ -43,6 +43,7 @@ Translations:
 - Deutsch: Bodo Thevissen
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
+- Italiano: Ajeje Brazorf
 
 General Settings
 Uninstall
