--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -43,6 +43,7 @@ ImDisk - Создатели
 - Deutsch: Bodo Thevissen
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
+- Italiano: Ajeje Brazorf
 
 Основные настройки
 Удаление
