--- a/install/lang/schinese.txt
+++ b/install/lang/schinese.txt
@@ -9,17 +9,17 @@ DiscUtils 库 (使用 .NET Framework 4)
 RamDisk 配置工具
  选项 
 启用右键菜单
-在桌面创建快捷方式
+创建桌面快捷方式
 开机启动 ImDskSvc
 语言:
 请将鼠标放在选项上以获取详细信息.
-安装驱动程序。这包括控制面板小程序、命令行工具、imdisk.exe，以及从资源管理器右键菜单管理卷的界面。#请在命令提示符中键入“imdisk”以获取详细信息。
-装载高级映像文件格式(如VHD、VDI、VMDK和其他一些格式)时需要。##还在安装文件夹中添加命令行工具 DiscUtilsDevio.exe，以及在资源管理器中使用文件右键菜单中的库的专用对话框。
-此工具将允许您轻松地配置一个或多个具有不同设置的 RamDisk。
-在“驱动器”右键菜单和“文件”右键菜单中添加条目，以直接从资源管理器管理ImDisk卷和镜像文件。##此选项可以稍后在Windows“开始”菜单中设置。
-在桌面上创建快捷方式。##同时也会在在Windows“开始”菜单中创建。
+安装驱动程序。这包括控制面板程序、命令行工具、imdisk.exe，以资源管理器右键菜单。#请在命令提示符中键入“imdisk”以获取详细信息。
+高级映像文件格式支持(如VHD、VDI、VMDK和其他一些格式)。##同时安装命令行工具 DiscUtilsDevio.exe，以及对应的右键菜单功能。
+此工具将允许您轻松地配置一个或多个具有不同配置的 RamDisk。
+为“驱动器”和“文件”添加右键菜单。##此选项可以稍后在Windows“开始”菜单中设置。
+创建桌面快捷方式。##同时也会在在Windows“开始”菜单中创建快捷方式。
 在系统启动时自动启动ImDskSvc。#此软件包中没有任何工具使用此服务，因此您可以安全地取消选中此选项。#它是由驱动程序负责安装的，用于启动与代理软件的TCP/IP或串行端口连接。
-贡献者
+贡献者/鸣谢
 安装
 取消
 正在安装...
@@ -35,7 +35,6 @@ ImDisk - 贡献者/鸣谢
 ● Olof Lagerkvist: ImDisk 虚拟磁盘驱动程序、调用DiscUtils 的工具
 ● v77: RamDisk 配置工具、依赖于DiscUtils的图形界面程序、本程序包的安装程序
 ● Kenneth Bell: DiscUtils .NET 库
-● Igor Pavlov: 压缩程序、用于打包的小型7z-sfx模块
 翻译人员:
 - Français: v77
 - Español: alacran
@@ -44,6 +43,7 @@ ImDisk - 贡献者/鸣谢
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
 - Italiano: Ajeje Brazorf
+- Português Brasileiro: Rodolfo Bendinelli
 
 一般设置
 卸载
@@ -70,6 +70,7 @@ ImDisk - 安装
 ImDisk - 安装
  一般设置
 启用右键菜单
+挂载后不自动打开资源管理器
 恢复隐藏的对话框
  在资源管理器中隐藏以下驱动器: 
 保存设置...
@@ -302,7 +303,7 @@ PB
 ISO 镜像
 全部文件
 %s 已锁定并且准备就绪。
-%s 正在被另一个程序使用，无法锁定。#因此，可以在复制时对其进行修改。
+%s 正在被另一个程序使用，无法锁定。#因此，文件可能在复制时被修改。
 正在保存 %s ... %u%%
 卷 %s 成功保存到 %s.
 不支持的驱动器类型。
