--- a/install/lang/french.txt
+++ b/install/lang/french.txt
@@ -35,7 +35,6 @@ ImDisk - Crédits
 ● Olof Lagerkvist : Pilote de Disque Virtuel ImDisk, et plusieurs outils pour utiliser la librairie DiscUtils
 ● v77 : Outil de Configuration de Ramdisk, boîte de dialogue utilisant DiscUtils et installateur de ce paquet
 ● Kenneth Bell : librairie .NET DiscUtils
-● Igor Pavlov : compresseur et petit module 7z-SFX utilisé pour ce paquet
 Traductions :
 - Français: v77
 - Español: alacran
@@ -44,6 +43,7 @@ Traductions :
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
 - Italiano: Ajeje Brazorf
+- Português Brasileiro: Rodolfo Bendinelli
 
 Réglages Généraux
 Désinstaller
@@ -70,6 +70,7 @@ Suppression des composants restants...
 ImDisk - Installation
  Réglages Généraux 
 Activer les entrées dans les menus contextuels
+Ne pas afficher l'Explorateur après le montage d'un volume
 Restaurer les messages cachés
  Cacher les lecteurs suivants dans l'Explorateur : 
 Sauvegarder les Paramètres...
