--- a/install/lang/russian.txt
+++ b/install/lang/russian.txt
@@ -35,7 +35,6 @@ ImDisk - Создатели
 ● Olof Lagerkvist: Драйвер виртуального диска ImDisk, и некоторые утилиты для работы с библиотекой DiscUtils
 ● v77: Утилита конфигурирования Ram-дисков, диалоговые окна, используемые DiscUtils и программой установки
 ● Kenneth Bell: .NET библиотека DiscUtils
-● Igor Pavlov: сжатие и компактный 7z-SFX модуль, использованный для этого пакета уствановки
 Локализация:
 - Français: v77
 - Español: alacran
@@ -44,6 +43,7 @@ ImDisk - Создатели
 - русский: 0x00ffh
 - 简体中文: Arne Sacnussem
 - Italiano: Ajeje Brazorf
+- Português Brasileiro: Rodolfo Bendinelli
 
 Основные настройки
 Удаление
@@ -70,6 +70,7 @@ ImDisk - Удаление
 ImDisk - Установка
  Основные параметры 
 Добавить в контекстное меню
+Don't show Explorer after volume mounting
 Восстановить скрытые диалоговые окна
  Скрыть следующие диски в Проводнике: 
 Сохранить параметры...
