--- a/install/lang/schinese.txt
+++ b/install/lang/schinese.txt
@@ -40,7 +40,7 @@ ImDisk - 贡献者/鸣谢
 - Español: alacran
 - Svenska: Åke Engelbrektson / Olof Lagerkvist
 - Deutsch: Bodo Thevissen
-- русский: 0x00ffh
+- русский: 0x00ffh / Strani
 - 简体中文: Arne Sacnussem
 - Italiano: Ajeje Brazorf
 - Português Brasileiro: Rodolfo Bendinelli
